[package]
name = "kernel-builder"
version = "0.1.3"
edition = "2021"
authors = ["koopa1338 <sinner1991@gmail.com"]
license-file = "LICENSE.md"
description = "select kernel version from available sources, build and install"

[dependencies]
config = "0.13"
dialoguer = "0.10"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
sudo = "0.6"
thiserror = "1.0"

[features]
dracut = []
