[package]
name = "kernel-builder"
version = "0.2.2"
edition = "2021"
authors = ["koopa1338 <sinner1991@gmail.com"]
license-file = "LICENSE.md"
description = "select kernel version from available sources, build and install"
repository = "https://github.com/koopa1338/kernel-builder"

[dependencies]
config = "0.13"
dialoguer = "0.10"
indicatif = "0.17"
pico-args = "0.5"
serde = { version = "1.0", features = ["derive"] }
sudo = "0.6"
thiserror = "1.0"

[features]
dracut = []
